Removing proprietary test